Add logo, favicon, refine text

--- a/index.html
+++ b/index.html
@@ -1,25 +1,49 @@
 <!doctype html>
 <html lang="id">
   <head>
+    <!-- Charset & Viewport -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MYTECH Indonesia - Partner Transformasi Digital Terpercaya</title>
-    <meta name="description" content="MYTECH Indonesia adalah perusahaan teknologi terdepan yang menyediakan solusi software, AI, dan cloud infrastructure untuk transformasi digital bisnis Anda." />
+
+    <!-- Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@500;600;700;800&family=Plus+Jakarta+Sans:wght@400;500;600;700&family=Playfair+Display:wght@600;700;800&display=swap" rel="stylesheet">
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="/src/assets/favicon.png" />
+    <link rel="apple-touch-icon" href="/src/assets/favicon.png" />
+    <meta name="theme-color" content="#0F172A" />
+
+    <!-- Primary SEO -->
+    <title>MYTECH Indonesia — Partner IT & Software Development Terpercaya</title>
+    <meta name="description" content="MYTECH Indonesia adalah perusahaan IT di Indonesia yang menyediakan layanan software custom, AI automation, cloud, SaaS, dan sistem enterprise untuk bisnis modern." />
+    <meta name="keywords" content="MYTECH Indonesia, software house Indonesia, jasa IT Malang, software custom, AI Indonesia, cloud computing, web development, mobile apps, SaaS Indonesia" />
     <meta name="author" content="MYTECH Indonesia" />
-    <meta name="keywords" content="software development, AI, machine learning, cloud infrastructure, mobile app, web development, Indonesia, Jakarta" />
+    <meta name="robots" content="index, follow" />
 
-    <meta property="og:title" content="MYTECH Indonesia - Partner Transformasi Digital Terpercaya" />
-    <meta property="og:description" content="Solusi teknologi inovatif untuk transformasi digital bisnis Indonesia." />
+    <!-- Open Graph (Facebook, LinkedIn, WhatsApp) -->
+    <meta property="og:title" content="MYTECH Indonesia — Partner Transformasi Digital Terpercaya" />
+    <meta property="og:description" content="Solusi software custom, AI automation, cloud, SaaS, dan sistem enterprise untuk mempercepat transformasi digital bisnis Anda." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:url" content="https://mytech-indonesia.web.id" />
+    <meta property="og:image" content="https://mytech-indonesia.web.id/og-image.png" />
+    <meta property="og:site_name" content="MYTECH Indonesia" />
 
+    <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@MYTECHIndonesia" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:title" content="MYTECH Indonesia — Software & IT Partner" />
+    <meta name="twitter:description" content="Partner IT terpercaya untuk software custom, AI automation, cloud services, dan SaaS enterprise." />
+    <meta name="twitter:image" content="https://mytech-indonesia.web.id/og-image.png" />
+
+    <!-- Performance -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
   </head>
 
-  <body>
+  <body class="bg-white text-slate-900">
     <div id="root"></div>
+
+    <!-- App Entry -->
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
