Add SEO and pricing page

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta name="theme-color" content="#0F172A" />
 
     <!-- Primary SEO -->
-    <title>MYTECH Indonesia — Partner IT & Software Development Terpercaya</title>
+    <title>MYTECH Indonesia — Partner IT Terbaik Di Malang</title>
     <meta name="description" content="MYTECH Indonesia adalah perusahaan IT di Indonesia yang menyediakan layanan software custom, AI automation, cloud, SaaS, dan sistem enterprise untuk bisnis modern." />
     <meta name="keywords" content="MYTECH Indonesia, software house Indonesia, jasa IT Malang, software custom, AI Indonesia, cloud computing, web development, mobile apps, SaaS Indonesia" />
     <meta name="author" content="MYTECH Indonesia" />
